--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <section class="hero" id="home">
   <main class="content">
     <h1>Her<span>vio</span>la.</h1>
-    <p>let the show begin</p>
+    <p>discover the truth</p>
     <a href="#" class="cta"></a>
   </main>
 </section>
