--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <nav class="navbar">
-    <a href="#" class="navbar-logo">Lyn<span>sparkl</span>e.</a>
+    <a href="#" class="navbar-logo">Lyn<span>sparkl</span>ence.</a>
 
   <div class="navbar-nav">
     <a href="#home">home</a>
@@ -35,8 +35,8 @@
 <section class="hero" id="home">
   <main class="content">
     <h1>Her<span>vio</span>la.</h1>
-    <p>discover the truth</p>
-    <a href="#" class="cta"></a>
+    <p>let's the silence kill you slowly</p>
+    <a href="#" class="cta">Play now</a>
   </main>
 </section>
 
@@ -80,7 +80,7 @@
 
 <footer>
   <div class="socials">
-    <a href="#"><i data-feather="instagram"></i></a>
+    <a href="https://www.instagram.com/emicehaaeel/"><i data-feather="instagram"></i></a>
     <a href="#"><i data-feather="twitter"></i></a>
     <a href="#"><i data-feather="facebook"></i></a>
 
@@ -90,7 +90,7 @@
       <a href="#contact">Contact</a>
     </div>
     <div class="credit">
-      <p>Created by <a href="">Michael</a>. | &copy; 2024.</p>
+      <p>Created by <a href="">Michael</a>. | &copy; 2024.<br>Kind family</p>
     </div>
   </div>
 </footer>
