--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>projek</title>
+  <title>Lynsparklence</title>
   <link href='/style.css' rel='stylesheet'>
 
   <script src="https://feathericons.com/?query="></script>
