--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Lynsparklence</title>
-  <link href='/style.css' rel='stylesheet'>
+  <link href='style.css' rel='stylesheet'>
 
   <script src="https://feathericons.com/?query="></script>
 
@@ -45,7 +45,7 @@
   
   <div class="row">
     <div class="about-img">
-      <img src="freepik__candid-image-photography-natural-textures-highly-r__98515.jpeg" alt="about">
+      <img src="../freepik__candid-image-photography-natural-textures-highly-r__98515.jpeg" alt="about">
     </div>
   
   <div class="content">
