--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   
   <div class="row">
     <div class="about-img">
-      <img src="../freepik__candid-image-photography-natural-textures-highly-r__98515.jpeg" alt="about">
+      <img src="freepik__candid-image-photography-natural-textures-highly-r__98515.jpeg" alt="about">
     </div>
   
   <div class="content">
